# CatBot

./: CMakeLists.txt  prepare_remote_debug.sh
include/: Device.hpp  DeviceFactory.hpp  RobotAction.hpp  RobotController.hpp  RobotWorldMap.hpp  machine.hpp
include/actuators/: Actuator.hpp  HeartBeat.hpp  Motor.hpp
include/exceptions/: MotorSpeedOutOfRangeException.hpp  notImplementedException.hpp
include/sensors/: AccelerometerSensor.hpp  BumperSensor.hpp  CompassSensor.hpp  DistanceSensor.hpp  GyroSensor.hpp  Sensor.hpp
src/: Device.cpp  DeviceFactory.cpp  Initialisation_state.cpp  RobotController.cpp  act_state.cpp  decision_state.cpp  finalizing_state.cpp  machine.cpp  machine_state.cpp  main.cpp  observe_state.cpp
src/actuators/: Actuator.cpp  HeartBeat.cpp  Motor.cpp
src/exceptions/: MotorSpeedOutOfRangeException.cpp  notImplementedException.cpp
src/sensors/: AccelerometerSensor.cpp  BumperSensor.cpp  CompassSensor.cpp  DistanceSensor.cpp  GyroSensor.cpp  Sensor.cpp
